--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "version": 2,
-    "builds": [{ "src": "./", "use": "@vercel/node" }],
+    "builds": [{ "src": "./src/app.js", "use": "@vercel/node" }],
     "routes": [{ "src": "/(.*)", "dest": "/" }]
   }
