--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js -e js,hbs",
-    "start": "nodemon src/app.js -e js,hbs"
+    "dev": "node src/app.js -e js,hbs",
+    "start": "node src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
