--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-    "version": 2,
-    "builds": [{ "src": "./src/app.js", "use": "@vercel/node" }],
-    "routes": [{ "src": "/(.*)", "dest": "/" }]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/app.js"
+    }
+  ]
+}
